--- a/04Kanbar-homepage-code/index.html
+++ b/04Kanbar-homepage-code/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Kelly -->
     <title>Kanbar Dining Center Homepage</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
