homepage&signin&signout

--- a/user.html
+++ b/user.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Kelly -->
-    <title>Kanbar Dining Center Homepage</title>
+    <title>Kanbar Users</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,11 +18,26 @@
 <body>
      <!-- Your Code Starts Here -->
      <!-- Logo -->
-<div class="d-flex justify-content-center">
-  <nav class="navbar navbar-expand-lg navbar-light ">
-    <a class="navbar-brand" href="#"><img src="image/homepage-img/logo-Jefferson-white.png" alt="Jefferson-Logo" class="JeffersonLogo"></a>
-  </nav>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light ">
+  <div class="container-fluid row">
+    <div class="col-md-2">
+      <a class="navbar-brand" href="#"><img src="image/homepage-img/logo-Jefferson-white.png" alt="Jefferson-Logo" class="JeffersonLogo"></a>
+    </div>
+    <div class="col-md-8 d-flex justify-content-center">
+      <div class="nav-item"><a href="#" class="hover-color"><p>Home</p></a></div>
+      <div class="nav-item"><a href="#" class="hover-color"><p>Order</p></a></div>
+      <div class="nav-item"><a href="#" class="hover-color"><p>Reward</p></a></div>
+      <div class="nav-item"><a href="#" class="hover-color"><p>Recent</p></a></div>
+    </div>
+    <div class="col-md-2">
+      <div class="nav-item-signout"><a href="#" class="hover-color"><p>Hi,</p></a></div>
+      <div class="nav-item-signout"><a href="#" class="hover-color"><p>Sign Out</p></a></div>
+    </div>
+  </div>
+</nav>
+
+
+
 
 <div class="container">
   <div class="card text-center">
@@ -124,12 +139,8 @@
 <!-- on premise end -->
 
 <footer>
-  <div class="row row-footer">
-    <div class="row-footer-item"><a href="#" class="icon-color"><i class="fas fa-home icon-size"></i><p>Home</p></a></div>
-    <div class="row-footer-item"><a href="#" class="icon-color"><i class="fas fa-utensils icon-size order"></i><p>Order</p></a></div>
-    <div class="row-footer-item"><a href="#" class="icon-color"><i class="fas fa-dollar-sign icon-size reward"></i><p>Reward</p></a></div>
-    <div class="row-footer-item"><a href="#" class="icon-color"><i class="fas fa-history icon-size recent"></i><p>Recent</p></a></div>
-    <div class="row-footer-item"><a href="#" class="icon-color"><i class="fas fa-bars icon-size more"></i><p>More</p></a></div>
+  <div class="container-fluid row row-footer">
+    <div class="row-footer-item"><a href="#" class="copyright-color"><p>Copyrights &copy;by 2019 CC&amp;SS</p></a></div>
   </div>
 </footer>
 
